--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "de.ur.mi.android.base"
-        minSdkVersion 16
+        applicationId "de.ur.mi.android.wetterfrosch"
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
